--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <link rel="stylesheet" type="text/css" href="ui-kit.css">
+        <link rel="stylesheet" type="text/css" href="./css/ui-kit.css">
     </head>
 <body>
 <header>
-    <h1>Best Ice-cream Recipes</h1>
+    <h1 class="bighead">Best Ice-cream Recipes:</h1>
+    <h2>The Olde-Timey Design Is Intentional For Now</h2>
     <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="#">Recipe-Checker</a>
+        <a href="index.html" class="active">HOME</a>
+        <a href="#">RECIPE-CHECKER</a>
     </nav>
 </header>
+<main>
+<div class="container">
+    <p>And welcome to our ice-cream newsletter.</p>
+
+</div>
 
 
 
+</main>
 <footer>
     Copyright &copy; Liz Bourke & Charlotte Cuffe
 
