--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang=en>
+<html lang=en> 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,42 @@
 <div class="container">
     <p>And welcome to our ice-cream newsletter.</p>
 
+    <div class="slideshow">
+        <div class="slides fade">
+            <div class="numbertext"> 1/4 </div>
+            <img src="images/20191121_171155.jpg" style="width: 100%" />
+            <div class="text"> Caption 1 </div>
+        </div>
+        <div class="slides fade">
+            <div class="numbertext"> 2/4 </div>
+            <img src="images/20191121_171207.jpg" style="width: 100%" />
+            <div class="text"> Caption 2 </div>
+        </div>
+        <div class="slides fade">
+            <div class="numbertext"> 3/4 </div>
+            <img src="images/20191121_171218.jpg" style="width: 100%" />
+            <div class="text"> Caption 3 </div>
+        </div>
+        <div class="slides fade">
+            <div class="numbertext"> 4/4 </div>
+            <img src="images/20191121_171227.jpg" style="width: 100%" />
+            <div class="text"> Caption 4 </div>
+        </div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
+
+
 </div>
 
 
@@ -30,5 +66,7 @@
 
 </footer>
 <script src="js/scripts.js"></script>
+<script src="js/angular.min.js"></script>
+<script src="js/AngController.js"></script>
 </body>
 </html>
