--- a/index.html
+++ b/index.html
@@ -6,39 +6,40 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <link rel="stylesheet" type="text/css" href="./css/ui-kit.css">
+        
     </head>
 <body>
 <header>
-    <h1 class="bighead">Best Ice-cream Recipes:</h1>
+    <h1 class="bighead">Learning To Make Things:</h1>
     <h2>The Olde-Timey Design Is Intentional For Now</h2>
     <nav>
         <a href="index.html" class="active">HOME</a>
-        <a href="#">RECIPE-CHECKER</a>
+        <a href="learnframeworks.html">LEARNING MORE</a>
     </nav>
 </header>
 <main>
 <div class="container">
-    <p>And welcome to our ice-cream newsletter.</p>
+    <p>And welcome to our learning-to-do-things newsletter.</p>
 
     <div class="slideshow">
         <div class="slides fade">
             <div class="numbertext"> 1/4 </div>
-            <img src="images/20191121_171155.jpg" style="width: 100%" />
+            <img src="images/20191121_171155.jpg" style="width: 100%" alt="alt-text here"/>
             <div class="text"> Caption 1 </div>
         </div>
         <div class="slides fade">
             <div class="numbertext"> 2/4 </div>
-            <img src="images/20191121_171207.jpg" style="width: 100%" />
+            <img src="images/20191121_171207.jpg" style="width: 100%" alt="alt-text here"/>
             <div class="text"> Caption 2 </div>
         </div>
         <div class="slides fade">
             <div class="numbertext"> 3/4 </div>
-            <img src="images/20191121_171218.jpg" style="width: 100%" />
+            <img src="images/20191121_171218.jpg" style="width: 100%" alt="alt-text here"/>
             <div class="text"> Caption 3 </div>
         </div>
         <div class="slides fade">
             <div class="numbertext"> 4/4 </div>
-            <img src="images/20191121_171227.jpg" style="width: 100%" />
+            <img src="images/20191121_171227.jpg" style="width: 100%" alt="alt-text here"/>
             <div class="text"> Caption 4 </div>
         </div>
         <!-- Next and previous buttons -->
