--- a/learnframeworks.html
+++ b/learnframeworks.html
@@ -6,7 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <link rel="stylesheet" type="text/css" href="./css/ui-kit.css">
-        
+        <link rel="stylesheet" type="text/css" href="js/jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+        <link rel="stylesheet" type="text/css" href="js/jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.structure.css">
+        <link rel="stylesheet" type="text/css" href="js/jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.theme.css">
+
     </head>
 <body>
 <header>
@@ -19,8 +22,16 @@
 </header>
 <main>
 
-<div id="app">
-    {{ message }}
+<div class="container">
+    <a href="index.html">Home</a>
+
+    <h2 id="test">This is a test.</h2>
+    
+    <button id="do-test">This is another test</button>
+
+
+
+
 </div>
 
 
@@ -29,6 +40,11 @@
 
 </footer>
 <script src="js/vue.js"></script>
+<script src="js/jquery-3.4.1.js"></script>
+<script src="js/jQueryscripts.js"></script>
+<script src="js/jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/UIjqueryscripts.js"></script>
+
 </body>
 </html>
